troubleshooting/ch4/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: python.lynn0706.com
      http:
        paths:
          - path: /
            backend:
              serviceName: python
              servicePort: 80
    - http:
        paths:
          - path: /v1
            backend:
              serviceName: python
              servicePort: 80
